--- a/forum/static/css/styles.css
+++ b/forum/static/css/styles.css
@@ -1,6 +1,6 @@
-/* Стилі для навігаційної панелі */
+
 .navbar {
-    background-color: #2c3e50; /* Темний фон для навбару */
+    background-color: #2c3e50;
     padding: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -12,13 +12,13 @@
 }
 
 .navbar .navbar-nav .nav-link {
-    color: #ecf0f1; /* Світлий текст для посилань */
+    color: #ecf0f1; 
     margin-right: 1rem;
     font-size: 1.1rem;
 }
 
 .navbar .navbar-nav .nav-link:hover {
-    color: #bdc3c7; /* Зміна кольору на більш світлий при наведенні */
+    color: #bdc3c7; 
 }
 
 .navbar .btn-primary, .navbar .btn-secondary {
