--- a/forum/templates/base.html
+++ b/forum/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">My Project</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Our Project</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,18 +23,23 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">Notifications</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'select_role' %}">Select Role</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="btn btn-outline-primary me-2" href="#">Logout</a>
+                        <a class="btn btn-outline-primary me-2" href="{% url 'logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="btn btn-primary me-2" href="#">Log In</a>
+                        <a class="btn btn-primary me-2" href="{% url 'login' %}">Log In</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-secondary" href="#">Register</a>
