--- a/forum/templates/index.html
+++ b/forum/templates/index.html
@@ -15,7 +15,7 @@
     <p>Get started by logging in or registering a new account.</p>
 
     {% if not user.is_authenticated %}
-    <a class="btn btn-primary btn-lg m-2" href="#" role="button">Log In</a>
+    <a class="btn btn-primary btn-lg m-2" href="{% url 'login' %}" role="button">Log In</a>
     <a class="btn btn-secondary btn-lg m-2" href="#" role="button">Register</a>
     {% else %}
     <p>You're already logged in. Feel free to explore the platform.</p>
