--- a/forum/static/css/styles.css
+++ b/forum/static/css/styles.css
@@ -6,13 +6,13 @@
 }
 
 .navbar .navbar-brand {
-    color: #ecf0f1;
+    color: #2980b9;
     font-weight: bold;
     font-size: 1.5rem;
 }
 
 .navbar .navbar-nav .nav-link {
-    color: #ecf0f1; 
+    color: #2980b9 ; 
     margin-right: 1rem;
     font-size: 1.1rem;
 }
