--- a/forum/frontend/src/styles/startupItem.css
+++ b/forum/frontend/src/styles/startupItem.css
@@ -1,5 +1,102 @@
-.startup-item {
-    border: 1px solid #ccc;
+.startup-item-container {
+    max-width: 800px;
+    margin: 0 auto;
     padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.startup-item-container h2 {
+    font-size: 2rem;
+    color: #2c3e50;
+    margin-bottom: 20px;
+}
+
+.startup-item-container p {
+    font-size: 1.2rem;
+    color: #7f8c8d;
+    margin-bottom: 15px;
+}
+
+.startup-item-container a {
+    color: #3498db;
+    text-decoration: none;
+}
+
+.startup-item-container a:hover {
+    text-decoration: underline;
+}
+
+.startup-item-container button {
+    background-color: #2980b9;
+    color: white;
+    border: none;
+    padding: 10px 20px;
     border-radius: 5px;
+    text-transform: uppercase;
+    margin-top: 20px;
+    transition: background-color 0.3s;
+}
+
+.startup-item-container button:hover {
+    background-color: #1f618d;
+    cursor: pointer;
+}
+
+.startup-item-container .form-group {
+    margin-bottom: 15px;
+}
+
+.startup-item-container input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #e1e1e1;
+    border-radius: 5px;
+}
+
+.message-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  }
+  
+  .message-container textarea.message-box {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none; 
+  }
+  
+  
+  .message-button {
+    width: 100px; 
+    padding: 12px;
+    background-color: #006bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: background-color 0.3s;
+    display: block; 
+    margin: 20px auto; 
+    text-align: center; 
+}
+  
+.message-container button:hover {
+    background-color: #0056b3;
+  }
+  
+  .message-container p.text-success {
+    color: #28a745;
+    font-size: 1rem;
+    text-align: center;
   }
