Changed some files

--- a/forum/users/templates/emails/welcome_email.html
+++ b/forum/users/templates/emails/welcome_email.html
@@ -5,7 +5,7 @@
     <title>Welcome to Our Platform</title>
 </head>
 <body>
-    <h2>Hello {{ username }},</h2>
+    <p>Hello {{ username }},</p>
     <p>Welcome to our platform! We're glad to have you with us.</p>
     <p>Feel free to explore and let us know if you have any questions.</p>
     <p>Best regards,<br>The Team</p>
